# double-pendulum

./: .gitignore  Brewfile  CMakeLists.txt  README.md
include/: butterfly_effect.h  chaos_fractal.h  constants.h  error.h  logger.h  physics.h  render.h  ui.h
include/screens/: screen_butterfly_effect.h  screen_chaos_fractal.h  screen_core_sim.h  screen_menu.h  screen_settings.h
src/: butterfly_effect.c  chaos_fractal.c  error.c  logger.c  main.c  physics.c  render.c  ui.c
src/screens/: screen_butterfly_effect.c  screen_chaos_fractal.c  screen_core_sim.c  screen_menu.c  screen_settings.c
